structmeta-tests/tests/compile_fail/struct_meta/hash_map_flag.rs
use std::collections::HashMap;
use structmeta::Flag;

#[derive(structmeta::StructMeta)]
struct Example {
    rest: HashMap<String, Flag>,
}

fn main() {}
