structmeta-tests/tests/compile_fail/struct_meta/hash_map_flag.stderr
error[E0277]: the trait bound `structmeta::Flag: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/hash_map_flag.rs:6:27
  |
6 |     rest: HashMap<String, Flag>,
  |                           ^^^^ the trait `Parse` is not implemented for `structmeta::Flag`
  |
  = help: the following other types implement trait `Parse`:
            Example
            std::boxed::Box<T>
            proc_macro2::TokenStream
            proc_macro2::TokenTree
            proc_macro2::Group
            proc_macro2::Punct
            syn::Ident
            proc_macro2::Literal
          and $N others
note: required by a bound in `ParseBuffer::<'a>::parse`
 --> $CARGO/syn-2.0.29/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
